@@ -61,7 +61,8 @@ endif
 WINDOWS_DEPENDENCIES = \
   LIBSHLWAPI \
   LIBWINMM \
-  LIBMSACM
+  LIBMSACM \
+  LIBMPR
 
 WINDOWS_TEST_DEPENDENCIES =
 
